# composable_kernel

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  CONTRIBUTORS.md  Config.cmake.in  Dockerfile  Jenkinsfile  LICENSE  README.md  cmake.sh  conv2d_asm_glda_with_sgpr.s  conv2d_asm_interleave_ds_write_part.s  dev-requirements.txt  pyproject.toml  rbuild.ini  requirements.txt
client/02_gemm_add_add_fastgelu/: CMakeLists.txt  gemm_add_add_fastgelu.cpp
client_example/: CMakeLists.txt  CMakePresets.json  README.md
client_example/01_gemm/: CMakeLists.txt  gemm.cpp
client_example/02_gemm_add_add_fastgelu/: CMakeLists.txt  gemm_add_add_fastgelu.cpp  gemm_add_add_fastgelu_generic.cpp  gemm_add_fastgelu.cpp  gemm_add_fastgelu_generic.cpp  gemm_fastgelu.cpp  gemm_fastgelu_generic.cpp
client_example/03_gemm_layernorm/: CMakeLists.txt  gemm_add_add_layernorm.cpp  gemm_add_add_layernorm_naive.cpp  gemm_add_relu_add_layernorm_welford.cpp
codegen/: CMakeLists.txt
device_operation/: CMakeLists.txt  device_batched_gemm_xdl_f16_f16_f16_gmk_gkn_gmm_instance.cpp  device_conv2d_fwd_xdl_bias_relu_add_nhwc_kyxc_nhwk_f16_instance.cpp  device_conv2d_fwd_xdl_bias_relu_nhwc_kyxc_nhwk_f16_instance.cpp  device_conv2d_fwd_xdl_c_shuffle_bias_relu_add_nhwc_kyxc_nhwk_f16_instance.cpp  device_conv2d_fwd_xdl_c_shuffle_bias_relu_atomic_add_nhwc_kyxc_nhwk_f16_instance.cpp  device_conv2d_fwd_xdl_c_shuffle_bias_relu_nhwc_kyxc_nhwk_f16_instance.cpp  device_conv2d_fwd_xdl_c_shuffle_nhwc_kyxc_nhwk_f16_instance.cpp  device_conv2d_fwd_xdl_nhwc_kyxc_nhwk_1x1_p0_f16_instance.cpp  device_conv2d_fwd_xdl_nhwc_kyxc_nhwk_1x1_s1_p0_f16_instance.cpp  device_conv2d_fwd_xdl_nhwc_kyxc_nhwk_bf16_instance.cpp  device_conv2d_fwd_xdl_nhwc_kyxc_nhwk_f16_instance.cpp  device_conv2d_fwd_xdl_nhwc_kyxc_nhwk_f32_instance.cpp  device_conv2d_fwd_xdl_nhwc_kyxc_nhwk_int8_instance.cpp  device_conv_xdl_instance_f16_f16_f16_nhwc_kyxc_nhwk.cpp  device_conv_xdl_instance_f32_f32_f32_nhwc_kyxc_nhwk.cpp  device_convnd_fwd_xdl_nhwc_kyxc_nhwk_f32_instance.cpp  device_gemm_xdl_f16_f16_f16_mk_kn_mn_instance.cpp  device_gemm_xdl_f16_f16_f16_mk_nk_mn_instance.cpp  device_gemm_xdl_f32_f32_f32_mk_kn_mn_instance.cpp  device_gemm_xdl_f32_f32_f32_mk_nk_mn_instance.cpp  device_gemm_xdl_instance_f16_f16_f16_km_kn_mn.cpp  device_gemm_xdl_instance_f16_f16_f16_km_nk_mn.cpp  device_gemm_xdl_instance_f16_f16_f16_mk_kn_mn.cpp  device_gemm_xdl_instance_f16_f16_f16_mk_nk_mn.cpp  device_gemm_xdl_instance_f32_f32_f32_km_kn_mn.cpp  device_gemm_xdl_instance_f32_f32_f32_km_nk_mn.cpp  device_gemm_xdl_instance_f32_f32_f32_mk_kn_mn.cpp  device_gemm_xdl_instance_f32_f32_f32_mk_nk_mn.cpp  device_gemm_xdl_splitk_f32_f32_f32_mk_kn_mn_instance.cpp  device_gemm_xdl_splitk_f32_f32_f32_mk_nk_mn_instance.cpp  device_gemm_xdl_splitk_instance_f32_f32_f32_km_kn_mn.cpp  device_gemm_xdl_splitk_instance_f32_f32_f32_km_nk_mn.cpp  device_gemm_xdl_splitk_instance_f32_f32_f32_mk_kn_mn.cpp  device_gemm_xdl_splitk_instance_f32_f32_f32_mk_nk_mn.cpp  device_reduce_instance.cpp  device_reduce_instance_blockwise.cpp  device_reduce_instance_blockwise_second_call.cpp  device_reduce_instance_multiblock_atomic_add.cpp  device_reduce_instance_multiblock_two_call.cpp  (+1 more)
driver/: CMakeLists.txt  conv.cpp  conv.cu  conv_bwd_data_driver.cpp  conv_bwd_data_driver_v2.cpp  conv_driver.cpp  conv_driver_v2.cpp  conv_driver_v2_olc.cpp  device_convolution_direct_v2_nchw_kcyx_nkhw.hpp  device_convolution_implicit_gemm_v1_chwn_cyxk_khwn.hpp  device_convolution_implicit_gemm_v1_nchw_cyxk_khwn.hpp  device_convolution_implicit_gemm_v1_nchw_cyxk_nkhw.hpp  device_convolution_implicit_gemm_v2_chwn_cyxk_khwn.hpp  device_convolution_implicit_gemm_v3_nchw_cyxk_nkhw.hpp  device_convolution_implicit_gemm_v4_nchw_kcyx_nkhw.hpp  device_direct_convolution_1.cuh  device_direct_convolution_1.hpp  device_direct_convolution_2.cuh  device_direct_convolution_2.hpp  device_direct_convolution_2_nchw_kcyx_nkhw.hpp  device_direct_convolution_2_vectorized_nchw_kcyx_nkhw.hpp  device_direct_convolution_3.cuh  device_implicit_gemm_convolution.cuh  device_implicit_gemm_convolution_1_chwn_csrk_khwn.cuh  device_implicit_gemm_convolution_1_chwn_csrk_khwn.hpp  device_implicit_gemm_convolution_1_chwn_csrk_khwn_padded.cuh  device_implicit_gemm_convolution_1_chwn_csrk_khwn_padded.hpp  device_implicit_gemm_convolution_1_chwn_csrk_khwn_with_padding.cuh  device_implicit_gemm_convolution_1_chwn_cyxk_khwn.hpp  device_implicit_gemm_convolution_1_chwn_cyxk_khwn_padded.hpp  device_implicit_gemm_convolution_1_nchw_kcsr.cuh  device_implicit_gemm_convolution_1_nchw_kcsr_nkhw.cuh  device_implicit_gemm_convolution_1_nchw_kcsr_nkhw.hpp  device_implicit_gemm_convolution_1_nchw_srck.cuh  device_implicit_gemm_convolution_1_nchw_srck_nkhw.cuh  device_implicit_gemm_convolution_1_nchw_srck_nkhw.hpp  device_implicit_gemm_convolution_2_chwn_csrk_khwn.hpp  device_implicit_gemm_convolution_2_chwn_cyxk_khwn.hpp  device_implicit_gemm_convolution_2_cnhw_csrk_knhw.cuh  device_implicit_gemm_convolution_2_cnhw_csrk_knhw.hpp  (+9 more)
example/: CMakeLists.txt
profiler/: CMakeLists.txt  README.md  conv_profiler.cpp  device_gemm_xdl_instance_f16_f16_f16_km_kn_mn.cpp  device_gemm_xdl_instance_f16_f16_f16_km_nk_mn.cpp  device_gemm_xdl_instance_f16_f16_f16_mk_kn_mn.cpp  device_gemm_xdl_instance_f16_f16_f16_mk_nk_mn.cpp  device_gemm_xdl_instance_f32_f32_f32_km_kn_mn.cpp  device_gemm_xdl_instance_f32_f32_f32_km_nk_mn.cpp  device_gemm_xdl_instance_f32_f32_f32_mk_kn_mn.cpp  device_gemm_xdl_instance_f32_f32_f32_mk_nk_mn.cpp  device_gemm_xdl_instance_vol1.cpp  device_gemm_xdl_instance_vol2.cpp  driver_profiler.cpp  fp8_gmm_profiler.sh  gemm_profiler.cpp  int8_gmm_profiler.sh  profile_batched_gemm.cpp  profile_conv_fwd.cpp  profile_conv_fwd_bias_relu.cpp  profile_conv_fwd_bias_relu_add.cpp  profile_conv_fwd_bias_relu_atomic_add.cpp  profile_gemm.cpp  profiler.cpp  reduce_profiler.cpp
src/: CMakeLists.txt  device.cpp  device.cu  tensor.cpp
test/: CMakeLists.txt  conv2d_fwd.cpp  magic_number_division.cpp  split_k.cpp
(+6319 files in other folders)
